--- a/envs/shunPykeR.yml
+++ b/envs/shunPykeR.yml
@@ -1,231 +1,266 @@
 name: shunPykeR
 channels:
+  - bioconda
   - conda-forge
   - defaults
 dependencies:
-  - alabaster=0.7.12=py_0
-  - anndata=0.8.0=pyhd8ed1ab_1
-  - appnope=0.1.2=py38hecd8cb5_1001
-  - argon2-cffi=21.3.0=pyhd3eb1b0_0
-  - argon2-cffi-bindings=21.2.0=py38hca72f7f_0
-  - arpack=3.7.0=hff0ca13_2
-  - asttokens=2.0.5=pyhd3eb1b0_0
-  - attrs=21.4.0=pyhd3eb1b0_0
-  - babel=2.10.3=pyhd8ed1ab_0
-  - backcall=0.2.0=pyhd3eb1b0_0
-  - beautifulsoup4=4.11.1=py38hecd8cb5_0
-  - bleach=4.1.0=pyhd3eb1b0_0
-  - brotli=1.0.9=h5eb16cf_7
-  - brotli-bin=1.0.9=h5eb16cf_7
-  - brotlipy=0.7.0=py38hed1de0f_1004
-  - ca-certificates=2022.6.15.1=h033912b_0
-  - certifi=2022.6.15.1=pyhd8ed1ab_0
-  - cffi=1.15.1=py38hc55c11b_0
-  - charset-normalizer=2.1.1=pyhd8ed1ab_0
-  - colorama=0.4.5=pyhd8ed1ab_0
-  - cryptography=37.0.4=py38h0f8513e_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - debugpy=1.5.1=py38he9d5cce_0
-  - decorator=5.1.1=pyhd3eb1b0_0
-  - defusedxml=0.7.1=pyhd3eb1b0_0
-  - docutils=0.19=py38h50d1736_0
-  - entrypoints=0.4=py38hecd8cb5_0
-  - executing=0.8.3=pyhd3eb1b0_0
-  - fonttools=4.37.1=py38hef030d1_0
-  - freetype=2.10.4=h4cff582_1
-  - glpk=4.65=h0f52abe_1004
-  - gmp=6.2.1=h2e338ed_0
-  - h5py=3.7.0=py38h4a1dd59_0
-  - hdf5=1.10.6=nompi_haae91d6_101
-  - icu=58.2=h0a44026_1000
-  - igraph=0.9.10=hb215a4b_0
-  - imagesize=1.4.1=pyhd8ed1ab_0
-  - importlib-metadata=4.11.4=py38h50d1736_0
-  - importlib_metadata=4.11.4=hd8ed1ab_0
-  - importlib_resources=5.2.0=pyhd3eb1b0_1
-  - ipykernel=6.15.2=py38hecd8cb5_0
-  - ipython=8.4.0=py38hecd8cb5_0
-  - ipython_genutils=0.2.0=pyhd3eb1b0_1
-  - jedi=0.18.1=py38hecd8cb5_1
-  - jinja2=3.0.3=pyhd3eb1b0_0
-  - joblib=1.1.0=pyhd8ed1ab_0
-  - jpeg=9e=hac89ed1_2
-  - jsonschema=4.4.0=py38hecd8cb5_0
-  - jupyter_client=7.3.5=py38hecd8cb5_0
-  - jupyter_core=4.10.0=py38hecd8cb5_0
-  - jupyterlab_pygments=0.1.2=py_0
-  - kiwisolver=1.4.4=py38hf58141a_0
-  - lcms2=2.12=h577c468_0
-  - leidenalg=0.8.10=py38h038c8f4_0
-  - libblas=3.9.0=8_openblas
-  - libbrotlicommon=1.0.9=h5eb16cf_7
-  - libbrotlidec=1.0.9=h5eb16cf_7
-  - libbrotlienc=1.0.9=h5eb16cf_7
-  - libcblas=3.9.0=8_openblas
-  - libcxx=14.0.6=h9765a3e_0
-  - libffi=3.3=hb1e8313_2
-  - libgfortran=4.0.0=7_5_0_h1a10cd1_23
-  - libgfortran4=7.5.0=h1a10cd1_23
-  - libiconv=1.17=hac89ed1_0
-  - liblapack=3.9.0=8_openblas
-  - libllvm11=11.1.0=hd011deb_2
-  - libopenblas=0.3.12=openmp_h63d9170_1
-  - libpng=1.6.37=h7cec526_2
-  - libsodium=1.0.18=h1de35cc_0
-  - libtiff=4.2.0=h87d7836_0
-  - libwebp-base=1.2.4=h775f41a_0
-  - libxml2=2.9.14=hbf8cd5e_0
-  - llvm-openmp=14.0.4=ha654fa7_0
-  - llvmlite=0.38.0=py38h8346a28_0
-  - lz4-c=1.9.3=he49afe7_1
-  - markupsafe=2.1.1=py38hca72f7f_0
-  - matplotlib-base=3.5.3=py38h2894597_0
-  - matplotlib-inline=0.1.6=py38hecd8cb5_0
-  - metis=5.1.0=h2e338ed_1006
-  - mistune=0.8.4=py38h1de35cc_1001
-  - mpfr=4.1.0=h0f52abe_1
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - natsort=8.2.0=pyhd8ed1ab_0
-  - nbclient=0.5.13=py38hecd8cb5_0
-  - nbconvert=6.4.4=py38hecd8cb5_0
-  - nbformat=5.3.0=py38hecd8cb5_0
-  - ncurses=6.3=hca72f7f_3
-  - nest-asyncio=1.5.5=py38hecd8cb5_0
-  - networkx=2.8.6=pyhd8ed1ab_0
-  - notebook=6.4.12=py38hecd8cb5_0
-  - numba=0.55.1=py38hae1ba45_0
-  - olefile=0.46=pyh9f0ad1d_1
-  - openssl=1.1.1q=hfe4f2af_0
-  - packaging=21.3=pyhd3eb1b0_0
-  - pandas=1.4.4=py38h5e0dbaf_0
-  - pandocfilters=1.5.0=pyhd3eb1b0_0
-  - parso=0.8.3=pyhd3eb1b0_0
-  - patsy=0.5.2=pyhd8ed1ab_0
-  - pexpect=4.8.0=pyhd3eb1b0_3
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pip=22.1.2=py38hecd8cb5_0
-  - prometheus_client=0.14.1=py38hecd8cb5_0
-  - prompt-toolkit=3.0.20=pyhd3eb1b0_0
-  - psutil=5.9.0=py38hca72f7f_0
-  - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - pure_eval=0.2.2=pyhd3eb1b0_0
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pygments=2.11.2=pyhd3eb1b0_0
-  - pynndescent=0.5.7=pyh6c4a22f_0
-  - pyopenssl=22.0.0=pyhd8ed1ab_0
-  - pyparsing=3.0.9=py38hecd8cb5_0
-  - pyrsistent=0.18.0=py38hca72f7f_0
-  - pysocks=1.7.1=pyha2e5f31_6
-  - python=3.8.13=hdfd78df_0
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python-fastjsonschema=2.16.2=py38hecd8cb5_0
-  - python-igraph=0.9.11=py38h1093a38_0
-  - python_abi=3.8=2_cp38
-  - pytz=2022.2.1=pyhd8ed1ab_0
-  - pyzmq=23.2.0=py38he9d5cce_0
-  - readline=8.1.2=hca72f7f_1
-  - scanpy=1.9.1=pyhd8ed1ab_0
-  - scikit-learn=1.1.2=py38h27a3d75_0
-  - scipy=1.5.3=py38h352ea5d_0
-  - seaborn=0.12.0=hd8ed1ab_0
-  - seaborn-base=0.12.0=pyhd8ed1ab_0
-  - send2trash=1.8.0=pyhd3eb1b0_1
-  - session-info=1.0.0=pyhd8ed1ab_0
-  - setuptools=63.4.1=py38hecd8cb5_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - snowballstemmer=2.2.0=pyhd8ed1ab_0
-  - soupsieve=2.3.1=pyhd3eb1b0_0
-  - sphinx=5.1.1=pyhd8ed1ab_1
-  - sphinxcontrib-applehelp=1.0.2=py_0
-  - sphinxcontrib-devhelp=1.0.2=py_0
-  - sphinxcontrib-htmlhelp=2.0.0=pyhd8ed1ab_0
-  - sphinxcontrib-jsmath=1.0.1=py_0
-  - sphinxcontrib-qthelp=1.0.3=py_0
-  - sphinxcontrib-serializinghtml=1.1.5=pyhd8ed1ab_2
-  - sqlite=3.39.2=h707629a_0
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - statsmodels=0.13.2=py38hc1426ef_0
-  - stdlib-list=0.7.0=py_2
-  - suitesparse=5.10.1=h7aff33d_1
-  - tbb=2021.5.0=hb8565cd_2
-  - terminado=0.13.1=py38hecd8cb5_0
-  - testpath=0.6.0=py38hecd8cb5_0
-  - texttable=1.6.4=pyhd8ed1ab_0
-  - threadpoolctl=3.1.0=pyh8a188c0_0
-  - tk=8.6.12=h5d9f67b_0
-  - tornado=6.2=py38hca72f7f_0
-  - tqdm=4.64.1=pyhd8ed1ab_0
-  - traitlets=5.1.1=pyhd3eb1b0_0
-  - typing-extensions=4.3.0=py38hecd8cb5_0
-  - typing_extensions=4.3.0=py38hecd8cb5_0
-  - umap-learn=0.5.3=py38h50d1736_0
-  - unicodedata2=14.0.0=py38hed1de0f_1
-  - urllib3=1.26.11=pyhd8ed1ab_0
-  - wcwidth=0.2.5=pyhd3eb1b0_0
-  - webencodings=0.5.1=py38_1
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.5=hca72f7f_1
-  - zeromq=4.3.4=h23ab428_0
-  - zipp=3.8.0=py38hecd8cb5_0
-  - zlib=1.2.12=h4dc903c_3
-  - zstd=1.4.9=h582d3a0_0
+  - scanpy=1.9.1
+  - scikit-learn=1.1.2
+  - python-igraph=0.9.11
+  - leidenalg
+  - openpyxl
+  - rpy2
+  - pyreadr
+  - loompy
+  - feather-format=0.4.1
+  - bioconductor-mast
+  - r-openxlsx
+  - r-data.table
+  - r-ggplot2
+  - r-ggpubr
+  - r-rcolorbrewer
+  - r-dichromat
+  - r-readxl
+  - r-pheatmap
+  - r-dplyr
+  - r-arrow
+  - r-feather
+  - r-stringr
+  - r-pacman
+  - xlsxwriter
+  - harmonypy
+  - bioconductor-delayedarray
+  - bioconductor-hdf5array
   - pip:
-    - aniso8601==9.0.1
-    - anndata2ri==1.1
-    - annoy==1.17.1
-    - backports-zoneinfo==0.2.1
-    - biomart==0.9.2
-    - chardet==4.0.0
-    - click==8.1.3
-    - cmake==3.24.1.1
-    - cython==0.29.32
-    - dunamai==1.13.0
-    - et-xmlfile==1.1.0
-    - fa2==0.3.5
-    - fbpca==1.0
-    - fcsparser==0.2.4
-    - feather-format==0.4.1
-    - flask==1.1.2
-    - flask-cors==3.0.10
-    - flask-restful==0.3.9
-    - geosketch==1.2
-    - get-version==3.5.4
-    - harmonypy==0.0.6
-    - harmonyts==0.1.4
-    - idna==2.10
-    - imageio==2.22.1
-    - intervaltree==3.1.0
-    - itsdangerous==2.1.2
-    - loompy==3.0.7
-    - mousipy==0.0.5
-    - nbstripout==0.6.1
-    - numexpr==2.8.3
-    - numpy==1.20.2
-    - numpy-groupies==0.9.19
-    - openpyxl==3.0.10
+    - scrublet
+    - scvelo
+    - scanorama
+    - mousipy
     - palantir==1.0.1
-    - phenograph==1.5.7
-    - pillow==9.2.0
-    - pyarrow==9.0.0
-    - pyreadr==0.4.6
-    - python-slugify==5.0.2
-    - pytz-deprecation-shim==0.1.0.post0
-    - pywavelets==1.3.0
-    - requests==2.25.1
-    - rpy2==3.5.4
-    - scanorama==1.7.2
-    - scikit-image==0.19.3
-    - scrublet==0.2.3
-    - scvelo==0.2.4
-    - sklearn==0.0
-    - sortedcontainers==2.4.0
-    - tables==3.7.0
-    - text-unidecode==1.3
-    - tifffile==2022.8.12
-    - tzdata==2022.2
-    - tzlocal==4.2
-    - watermark==2.3.1
-    - werkzeug==2.2.2
-    - xlrd==2.0.1
-    - xlsxwriter==3.0.3
+    - magic-impute
+  # alabaster=0.7.12=py_0
+  # - anndata=0.8.0=pyhd8ed1ab_1
+  # - appnope=0.1.2=py38hecd8cb5_1001
+  # - argon2-cffi=21.3.0=pyhd3eb1b0_0
+  # - argon2-cffi-bindings=21.2.0=py38hca72f7f_0
+  # - arpack=3.7.0=hff0ca13_2
+  # - asttokens=2.0.5=pyhd3eb1b0_0
+  # - attrs=21.4.0=pyhd3eb1b0_0
+  # - babel=2.10.3=pyhd8ed1ab_0
+  # - backcall=0.2.0=pyhd3eb1b0_0
+  # - beautifulsoup4=4.11.1=py38hecd8cb5_0
+  # - bleach=4.1.0=pyhd3eb1b0_0
+  # - brotli=1.0.9=h5eb16cf_7
+  # - brotli-bin=1.0.9=h5eb16cf_7
+  # - brotlipy=0.7.0=py38hed1de0f_1004
+  # - ca-certificates=2022.6.15.1=h033912b_0
+  # - certifi=2022.6.15.1=pyhd8ed1ab_0
+  # - cffi=1.15.1=py38hc55c11b_0
+  # - charset-normalizer=2.1.1=pyhd8ed1ab_0
+  # - colorama=0.4.5=pyhd8ed1ab_0
+  # - cryptography=37.0.4=py38h0f8513e_0
+  # - cycler=0.11.0=pyhd8ed1ab_0
+  # - debugpy=1.5.1=py38he9d5cce_0
+  # - decorator=5.1.1=pyhd3eb1b0_0
+  # - defusedxml=0.7.1=pyhd3eb1b0_0
+  # - docutils=0.19=py38h50d1736_0
+  # - entrypoints=0.4=py38hecd8cb5_0
+  # - executing=0.8.3=pyhd3eb1b0_0
+  # - fonttools=4.37.1=py38hef030d1_0
+  # - freetype=2.10.4=h4cff582_1
+  # - glpk=4.65=h0f52abe_1004
+  # - gmp=6.2.1=h2e338ed_0
+  # - h5py=3.7.0=py38h4a1dd59_0
+  # - hdf5=1.10.6=nompi_haae91d6_101
+  # - icu=58.2=h0a44026_1000
+  # - igraph=0.9.10=hb215a4b_0
+  # - imagesize=1.4.1=pyhd8ed1ab_0
+  # - importlib-metadata=4.11.4=py38h50d1736_0
+  # - importlib_metadata=4.11.4=hd8ed1ab_0
+  # - importlib_resources=5.2.0=pyhd3eb1b0_1
+  # - ipykernel=6.15.2=py38hecd8cb5_0
+  # - ipython=8.4.0=py38hecd8cb5_0
+  # - ipython_genutils=0.2.0=pyhd3eb1b0_1
+  # - jedi=0.18.1=py38hecd8cb5_1
+  # - jinja2=3.0.3=pyhd3eb1b0_0
+  # - joblib=1.1.0=pyhd8ed1ab_0
+  # - jpeg=9e=hac89ed1_2
+  # - jsonschema=4.4.0=py38hecd8cb5_0
+  # - jupyter_client=7.3.5=py38hecd8cb5_0
+  # - jupyter_core=4.10.0=py38hecd8cb5_0
+  # - jupyterlab_pygments=0.1.2=py_0
+  # - kiwisolver=1.4.4=py38hf58141a_0
+  # - lcms2=2.12=h577c468_0
+  # - leidenalg=0.8.10=py38h038c8f4_0
+  # - libblas=3.9.0=8_openblas
+  # - libbrotlicommon=1.0.9=h5eb16cf_7
+  # - libbrotlidec=1.0.9=h5eb16cf_7
+  # - libbrotlienc=1.0.9=h5eb16cf_7
+  # - libcblas=3.9.0=8_openblas
+  # - libcxx=14.0.6=h9765a3e_0
+  # - libffi=3.3=hb1e8313_2
+  # - libgfortran=4.0.0=7_5_0_h1a10cd1_23
+  # - libgfortran4=7.5.0=h1a10cd1_23
+  # - libiconv=1.17=hac89ed1_0
+  # - liblapack=3.9.0=8_openblas
+  # - libllvm11=11.1.0=hd011deb_2
+  # - libopenblas=0.3.12=openmp_h63d9170_1
+  # - libpng=1.6.37=h7cec526_2
+  # - libsodium=1.0.18=h1de35cc_0
+  # - libtiff=4.2.0=h87d7836_0
+  # - libwebp-base=1.2.4=h775f41a_0
+  # - libxml2=2.9.14=hbf8cd5e_0
+  # - llvm-openmp=14.0.4=ha654fa7_0
+  # - llvmlite=0.38.0=py38h8346a28_0
+  # - lz4-c=1.9.3=he49afe7_1
+  # - markupsafe=2.1.1=py38hca72f7f_0
+  # - matplotlib-base=3.5.3=py38h2894597_0
+  # - matplotlib-inline=0.1.6=py38hecd8cb5_0
+  # - metis=5.1.0=h2e338ed_1006
+  # - mistune=0.8.4=py38h1de35cc_1001
+  # - mpfr=4.1.0=h0f52abe_1
+  # - munkres=1.1.4=pyh9f0ad1d_0
+  # - natsort=8.2.0=pyhd8ed1ab_0
+  # - nbclient=0.5.13=py38hecd8cb5_0
+  # - nbconvert=6.4.4=py38hecd8cb5_0
+  # - nbformat=5.3.0=py38hecd8cb5_0
+  # - ncurses=6.3=hca72f7f_3
+  # - nest-asyncio=1.5.5=py38hecd8cb5_0
+  # - networkx=2.8.6=pyhd8ed1ab_0
+  # - notebook=6.4.12=py38hecd8cb5_0
+  # - numba=0.55.1=py38hae1ba45_0
+  # - olefile=0.46=pyh9f0ad1d_1
+  # - openssl=1.1.1q=hfe4f2af_0
+  # - packaging=21.3=pyhd3eb1b0_0
+  # - pandas=1.4.4=py38h5e0dbaf_0
+  # - pandocfilters=1.5.0=pyhd3eb1b0_0
+  # - parso=0.8.3=pyhd3eb1b0_0
+  # - patsy=0.5.2=pyhd8ed1ab_0
+  # - pexpect=4.8.0=pyhd3eb1b0_3
+  # - pickleshare=0.7.5=pyhd3eb1b0_1003
+  # - pip=22.1.2=py38hecd8cb5_0
+  # - prometheus_client=0.14.1=py38hecd8cb5_0
+  # - prompt-toolkit=3.0.20=pyhd3eb1b0_0
+  # - psutil=5.9.0=py38hca72f7f_0
+  # - ptyprocess=0.7.0=pyhd3eb1b0_2
+  # - pure_eval=0.2.2=pyhd3eb1b0_0
+  # - pycparser=2.21=pyhd3eb1b0_0
+  # - pygments=2.11.2=pyhd3eb1b0_0
+  # - pynndescent=0.5.7=pyh6c4a22f_0
+  # - pyopenssl=22.0.0=pyhd8ed1ab_0
+  # - pyparsing=3.0.9=py38hecd8cb5_0
+  # - pyrsistent=0.18.0=py38hca72f7f_0
+  # - pysocks=1.7.1=pyha2e5f31_6
+  # - python=3.8.13=hdfd78df_0
+  # - python-dateutil=2.8.2=pyhd3eb1b0_0
+  # - python-fastjsonschema=2.16.2=py38hecd8cb5_0
+  # - python-igraph=0.9.11=py38h1093a38_0
+  # - python_abi=3.8=2_cp38
+  # - pytz=2022.2.1=pyhd8ed1ab_0
+  # - pyzmq=23.2.0=py38he9d5cce_0
+  # - readline=8.1.2=hca72f7f_1
+  # - scanpy=1.9.1=pyhd8ed1ab_0
+  # - scikit-learn=1.1.2=py38h27a3d75_0
+  # - scipy=1.5.3=py38h352ea5d_0
+  # - seaborn=0.12.0=hd8ed1ab_0
+  # - seaborn-base=0.12.0=pyhd8ed1ab_0
+  # - send2trash=1.8.0=pyhd3eb1b0_1
+  # - session-info=1.0.0=pyhd8ed1ab_0
+  # - setuptools=63.4.1=py38hecd8cb5_0
+  # - six=1.16.0=pyhd3eb1b0_1
+  # - snowballstemmer=2.2.0=pyhd8ed1ab_0
+  # - soupsieve=2.3.1=pyhd3eb1b0_0
+  # - sphinx=5.1.1=pyhd8ed1ab_1
+  # - sphinxcontrib-applehelp=1.0.2=py_0
+  # - sphinxcontrib-devhelp=1.0.2=py_0
+  # - sphinxcontrib-htmlhelp=2.0.0=pyhd8ed1ab_0
+  # - sphinxcontrib-jsmath=1.0.1=py_0
+  # - sphinxcontrib-qthelp=1.0.3=py_0
+  # - sphinxcontrib-serializinghtml=1.1.5=pyhd8ed1ab_2
+  # - sqlite=3.39.2=h707629a_0
+  # - stack_data=0.2.0=pyhd3eb1b0_0
+  # - statsmodels=0.13.2=py38hc1426ef_0
+  # - stdlib-list=0.7.0=py_2
+  # - suitesparse=5.10.1=h7aff33d_1
+  # - tbb=2021.5.0=hb8565cd_2
+  # - terminado=0.13.1=py38hecd8cb5_0
+  # - testpath=0.6.0=py38hecd8cb5_0
+  # - texttable=1.6.4=pyhd8ed1ab_0
+  # - threadpoolctl=3.1.0=pyh8a188c0_0
+  # - tk=8.6.12=h5d9f67b_0
+  # - tornado=6.2=py38hca72f7f_0
+  # - tqdm=4.64.1=pyhd8ed1ab_0
+  # - traitlets=5.1.1=pyhd3eb1b0_0
+  # - typing-extensions=4.3.0=py38hecd8cb5_0
+  # - typing_extensions=4.3.0=py38hecd8cb5_0
+  # - umap-learn=0.5.3=py38h50d1736_0
+  # - unicodedata2=14.0.0=py38hed1de0f_1
+  # - urllib3=1.26.11=pyhd8ed1ab_0
+  # - wcwidth=0.2.5=pyhd3eb1b0_0
+  # - webencodings=0.5.1=py38_1
+  # - wheel=0.37.1=pyhd3eb1b0_0
+  # - xz=5.2.5=hca72f7f_1
+  # - zeromq=4.3.4=h23ab428_0
+  # - zipp=3.8.0=py38hecd8cb5_0
+  # - zlib=1.2.12=h4dc903c_3
+  # - zstd=1.4.9=h582d3a0_0
+  # - pip:
+  #   - aniso8601==9.0.1
+  #   - anndata2ri==1.1
+  #   - annoy==1.17.1
+  #   - backports-zoneinfo==0.2.1
+  #   - biomart==0.9.2
+  #   - chardet==4.0.0
+  #   - click==8.1.3
+  #   - cmake==3.24.1.1
+  #   - cython==0.29.32
+  #   - dunamai==1.13.0
+  #   - et-xmlfile==1.1.0
+  #   - fa2==0.3.5
+  #   - fbpca==1.0
+  #   - fcsparser==0.2.4
+  #   - feather-format==0.4.1
+  #   - flask==1.1.2
+  #   - flask-cors==3.0.10
+  #   - flask-restful==0.3.9
+  #   - geosketch==1.2
+  #   - get-version==3.5.4
+  #   - harmonypy==0.0.6
+  #   - harmonyts==0.1.4
+  #   - idna==2.10
+  #   - imageio==2.22.1
+  #   - intervaltree==3.1.0
+  #   - itsdangerous==2.1.2
+  #   - loompy==3.0.7
+  #   - mousipy==0.0.5
+  #   - nbstripout==0.6.1
+  #   - numexpr==2.8.3
+  #   - numpy==1.20.2
+  #   - numpy-groupies==0.9.19
+  #   - openpyxl==3.0.10
+  #   - palantir==1.0.1
+  #   - phenograph==1.5.7
+  #   - pillow==9.2.0
+  #   - pyarrow==9.0.0
+  #   - pyreadr==0.4.6
+  #   - python-slugify==5.0.2
+  #   - pytz-deprecation-shim==0.1.0.post0
+  #   - pywavelets==1.3.0
+  #   - requests==2.25.1
+  #   - rpy2==3.5.4
+  #   - scanorama==1.7.2
+  #   - scikit-image==0.19.3
+  #   - scrublet==0.2.3
+  #   - scvelo==0.2.4
+  #   - sklearn==0.0
+  #   - sortedcontainers==2.4.0
+  #   - tables==3.7.0
+  #   - text-unidecode==1.3
+  #   - tifffile==2022.8.12
+  #   - tzdata==2022.2
+  #   - tzlocal==4.2
+  #   - watermark==2.3.1
+  #   - werkzeug==2.2.2
+  #   - xlrd==2.0.1
+  #   - xlsxwriter==3.0.3
 prefix: /Users/akousa/opt/anaconda3/envs/shunPykeR
