--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -39,7 +39,7 @@ jobs:
           context: .
           file: Dockerfile-base
           push: true
-          tags:
-            - ${{ steps.meta.outputs.tags }}
-            - latest
+          tags: |
+            ${{ steps.meta.outputs.tags }}
+            latest
           labels: ${{ steps.meta.outputs.labels }}
