--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -41,5 +41,5 @@ jobs:
           push: true
           tags: |
             ${{ steps.meta.outputs.tags }}
-            latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           labels: ${{ steps.meta.outputs.labels }}
